Added styles to CSS - Cards
.playfair{
font-family: 'Diplomata SC', cursive;
}

--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ h1,h2,h3,h4,div {
 	font-family: 'Merienda One', 'Brush Script MT', cursive;
 }
 .playfair{
-font-family: 'Playfair Display', serif;
+font-family: 'Diplomata SC', cursive;
 }
 #schedule {
 	padding: 10em 0;
