Change the resolution of images used in links. Clean up some folders.

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ font-family: 'Diplomata SC', cursive;
 #schedule {
 	padding: 10em 0;
 	margin-bottom: 0;
-	background: url('https://i.ibb.co/Pz2SMVj/DSC-6279.jpg') center center / cover no-repeat fixed;
+	background: url('https://i.ibb.co/qFHZC2j/DSC-6279.jpg') center center / cover no-repeat fixed;
 }
 #schedule-box {
 	background-color: rgba(165, 42, 42, 0.8);
